--- a/gestion-hotel/src/main/java/Interfaz/frmlogin.form
+++ b/gestion-hotel/src/main/java/Interfaz/frmlogin.form
@@ -69,7 +69,7 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jLabel4" min="-2" pref="147" max="-2" attributes="0"/>
+                  <Component id="icollavero" min="-2" pref="147" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -79,7 +79,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jLabel4" max="32767" attributes="0"/>
+                      <Component id="icollavero" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -203,12 +203,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="jLabel4">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Files/archivo.png"/>
-            </Property>
-          </Properties>
+        <Component class="javax.swing.JLabel" name="icollavero">
         </Component>
         <Component class="javax.swing.JLabel" name="lblincorrecto">
           <Properties>
